minor fix: overflow hidden for hero.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 header {
     /* border-bottom: 1px solid black; */
+    overflow: hidden;
 }
 
 nav {
